<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (C) 2014 Subito.it S.r.l (www.subito.it)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:frost="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <it.subito.frost.FrostTextView
        android:id="@+id/frost_view"
        android:completionThreshold="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        frost:persister="it.subito.frost.store.InMemoryPersister"/>

    <it.subito.frost.FrostTextView
        android:id="@+id/frost_view_persistent"
        android:completionThreshold="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <it.subito.frost.FrostTextView
        android:id="@+id/frost_view_persistent_2"
        android:completionThreshold="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/spawn_button"
        android:text="spawn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/back_button"
        android:text="back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
